[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.41"
envy = "0.4.2"
flate2 = "1.1.2"
futures-util = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.141"
solana-account-decoder = "2.3.6"
solana-client = "2.3.6"
solana-sdk = "2.3.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
spl-token-2022 = "8.0.1"
tokio = "1.47.0"
url = { version = "2.5.4", features = ["serde"] }
